Completed Data Transformation

--- a/research/02_DataValidation.ipynb
+++ b/research/02_DataValidation.ipynb
@@ -169,27 +169,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-01 23:21:02,327: INFO: common: yaml file: /Users/sumit/Desktop/SUMIT/STUDY/Projects/Text-Summarizer/config/config.yaml loaded successfully]\n",
-      "[2024-05-01 23:21:02,329: INFO: common: yaml file: /Users/sumit/Desktop/SUMIT/STUDY/Projects/Text-Summarizer/params.yaml loaded successfully]\n",
-      "[2024-05-01 23:21:02,330: INFO: common: created directory at: artifacts]\n",
-      "Step 0\n",
-      "[2024-05-01 23:21:02,331: INFO: common: created directory at: artifacts/data_validation]\n",
-      "Step 1\n",
-      "Step 2\n",
-      "Step 3\n"
+      "[2024-05-02 00:34:09,090: INFO: common: yaml file: /Users/sumit/Desktop/SUMIT/STUDY/Projects/Text-Summarizer/config/config.yaml loaded successfully]\n",
+      "[2024-05-02 00:34:09,092: INFO: common: yaml file: /Users/sumit/Desktop/SUMIT/STUDY/Projects/Text-Summarizer/params.yaml loaded successfully]\n",
+      "[2024-05-02 00:34:09,094: INFO: common: created directory at: artifacts]\n",
+      "[2024-05-02 00:34:09,096: INFO: common: created directory at: artifacts/data_validation]\n"
      ]
     }
    ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
-    "    print(\"Step 0\")\n",
     "    data_validation_config = config.get_data_validation_config()\n",
-    "    print(\"Step 1\")\n",
     "    data_validation = DataValidation(config=data_validation_config)\n",
-    "    print(\"Step 2\")\n",
     "    data_validation.validate_all_files_exist()\n",
-    "    print(\"Step 3\")\n",
     "except Exception as e:\n",
     "    raise e"
    ]
